Start of Client State Handling

--- a/.env
+++ b/.env
@@ -1,5 +1,10 @@
 VT_AMQP_ENDPOINT=
 
+VT_HTTP_USER=
+VT_HTTP_PASS=
+
 VT_CDN_ENDPOINT=
 VT_CDN_ACCESSKEYID=
 VT_CDN_SECRETACCESSKEY=
+
+STATUS_HOST_BASE_URL=
